--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,9 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
-  socket: /var/run/mysqld/mysqld.sock
+  password: rootpassword
+  host: localhost
+  # socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
