--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,6 @@ test:
 production:
   <<: *default
   database: mindset_consultoria_production
+  host: ip-172-31-29-114.ec2.internal
   username: mindset_consultoria
   password: <%= ENV['MINDSET_CONSULTORIA_DATABASE_PASSWORD'] %>
