--- a/config/database.yml
+++ b/config/database.yml
@@ -53,4 +53,4 @@ production:
   database: chamadosfatec
   host: '137.184.179.21'
   username: root
-  password: <%= ENV['CHAMADOSFATEC_PASSWORD'] %>
+  password: Capotraste1*
