--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,10 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+  # <<: *default
+  adapter: mysql2
+  encoding: utf8
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: chamadosfatec
   host: '137.184.179.21'
   username: root
