--- a/config/database.yml
+++ b/config/database.yml
@@ -55,5 +55,5 @@ production:
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: chamadosfatec
   host: '137.184.179.21'
-  username: root
+  username: deploy
   password: Capotraste1*
