--- a/config/database.yml
+++ b/config/database.yml
@@ -57,4 +57,4 @@ production:
   host: 137.184.179.21
   username: deploy
   password: Capotraste1*
-  socket: /tmp/mysql.sock
+  socket: /var/run/mysqld/mysqld.sock
