--- a/config/database.yml
+++ b/config/database.yml
@@ -55,6 +55,6 @@ production:
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: chamadosfatec
   host: 137.184.179.21
-  username: deploy
-  password: Capotraste1*
+  username: root
+  password: 
   socket: /var/run/mysqld/mysqld.sock
